exports[`Game Component should match the snapshot 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <div>
    Alice
  </div>
  <div>
    Bob
  </div>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <div>
    Alice
  </div>
  <div>
    Bob
  </div>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 2`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <div>
    Alice
  </div>
  <div>
    Bob
  </div>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={true}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;
